--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.5.0",
+    "jquery": "^3.4.1",
+    "swiper": "^5.3.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
