--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap-vue": "^2.5.0",
     "jquery": "^3.4.1",
+    "node-sass": "^4.13.1",
     "swiper": "^5.3.1",
     "vue": "^2.5.2",
+    "vue-layer": "^1.1.7",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -37,7 +40,7 @@
     "chromedriver": "^2.27.2",
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -57,6 +60,8 @@
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^1.1.3",
+    "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
